# MineBackup

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  Languages.txt  MineBackup-main.cpp  MineBackup-preview.cpp  MineBackup.sln  MineBackup_en-us.cpp  MineBackup_zn-ch.cpp  README-zn.md  README.md  README_zh.md  SECURITY.md  desktop.ini  notice  notice_en  notice_zh
.github/: FUNDING.yml
.github/workflows/: linux-build-release.yml  macos-build-release.yml  windows-signpath-test.yml
MineBackup/: AppState.cpp  AppState.h  BackupManager.cpp  BackupManager.h  Broadcast.cpp  Broadcast.h  ConfigManager.cpp  ConfigManager.h  Console.cpp  Console.h  DataModels.h  GameSessionManager.cpp  Globals.h  HistoryManager.cpp  HistoryManager.h  HistoryUI.cpp  IconsFontAwesome6.h  MainUI.h  MineBackup.cpp  MineBackup.rc  MineBackup.vcxproj  MineBackup.vcxproj.filters  OpenSocketResponser.cpp  PlatformCompat.h  Platform_linux.cpp  Platform_linux.h  Platform_macos.cpp  Platform_macos.h  Platform_macos_tray.mm  Platform_win.cpp  Platform_win.h  RCa16720  Resource.rc  SettingsUI.cpp  SignalSender.cpp  SpecialMode.cpp  TaskSystem.cpp  TaskSystem.h  UIHelpers.h  WizardUI.cpp  (+14 more)
MineBackup/KnotLink/: KnotLinkServer.hpp  OpenSocketResponser.cpp  OpenSocketResponser.hpp  SignalSender.hpp  TcpClient.hpp  TcpClient_posix.hpp  main.cpp
MineBackup/imgui/: imgui_demo.cpp  imgui_style.h
MineBackup/src/app/: AppState.h  DataModels.h  Globals.cpp  Globals.h  MainUI.h  MineBackup.cpp
MineBackup/src/core/: BackupManager.cpp  BackupManager.h  BackupManagerRestore.inl  CloudSyncService.cpp  CloudSyncService.h  CoreValidation.cpp  CoreValidation.h  GameSessionManager.cpp  HistoryManager.cpp  HistoryManager.h  SpecialMode.cpp  TaskSystem.cpp  TaskSystem.h
MineBackup/src/infra/: Broadcast.cpp  ConfigManager.cpp  ConfigManager.h  Console.cpp  Console.h  i18n.cpp  i18n.h
MineBackup/src/platform/: PlatformCompat.h  Platform_linux.cpp  Platform_linux.h  Platform_macos.cpp  Platform_macos.h  Platform_macos_tray.mm  Platform_win.cpp  Platform_win.h
MineBackup/src/ui/: HistoryUI.cpp  SettingsUI.cpp  SettingsUI.h  SettingsUIAppearance.cpp  SettingsUIConfig.cpp  SettingsUIPrivate.h  SettingsUISpecial.cpp  UIHelpers.h  WizardUI.cpp  imgui-all.h
MineBackup/src/utils/: basic_func.cpp  text_to_text.cpp  text_to_text.h
docs/: structure-review.zh-CN.md
